[package]
name = "fracture-render"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
wgpu = "0.12.0"
winit = "0.26.0"
nalgebra = { version = "0.30.1", features = ["bytemuck"] }
log = "0.4.14"
bytemuck = { version = "1.7.2", features = ["derive"] }
palette = { version = "0.6.0", features = ["bytemuck"] }
env_logger = "0.9.0"
pollster = "0.2.4"
bitflags = "1.3.2"

[build-dependencies]
naga = { version = "0.8.2", features = ["spv-in", "wgsl-out"] }
glob = "0.3.0"
shaderc = "0.7.3"
